Esialgsed sammud lindistamisele.